Now updater is always copied without asking

--- a/src/NAppUpdate.Updater/NAppUpdate.Updater.csproj
+++ b/src/NAppUpdate.Updater/NAppUpdate.Updater.csproj
@@ -131,6 +131,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)\Updater.exe" "$(SolutionDir)src\NAppUpdate.Framework\Updater"</PostBuildEvent>
+    <PostBuildEvent>copy /y "$(TargetDir)\Updater.exe" "$(SolutionDir)src\NAppUpdate.Framework\Updater"</PostBuildEvent>
   </PropertyGroup>
 </Project>
